[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbu_export_images_romexis"
version = "1.0.0"
authors = [
  { name="MBU RPA", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow",
    "openpyxl >= 3.1.2",
    "pyodbc >= 5.1.0",
    "itk-dev-shared-components",
    "mbu-dev-shared-components == 1.2.1",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
